# AnnotChecking

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: annot_checking.py
tests/: test_annot_checking.py
