[tool.poetry]
name = "annotchecking"
version = "0.1.0"
description = "Custom lib to check python annotation coverage through multiple files"
authors = ["Alexandre Ghelfi <alexandreghelfi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bandit = "^1.7.4"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.950"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
